@@ -1,3 +1,6 @@
+2003-05-04 TADA Tadashi <sho@spc.gr.jp>
+	* whatsnew-list.rb: no use SERVER_PORT.
+
 2003-05-03 TADA Tadashi <sho@spc.gr.jp>
 	* add BlogRD style.
 
